# studying-drf

./: db.sqlite3  pyproject.toml
snippets/: views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py
